update env structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: player-stats-db
     restart: unless-stopped
+    env_file:
+      - ../.env
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-player_stats}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
